# MyShark

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  WIRESHARK_COMPARISON.md  demo.py  pyproject.toml  requirements.txt  tasks.ps1  web_app.py
.github/workflows/: ci.yml
api/: index.py
myshark/: .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  __init__.py  cli.py  demo_live.py  filters.py  generate_demo.py  load_demo_data.py  myshark.py  parser.py  pcap_store.py  quick_traffic.py  requirements.txt  run_demo.bat  run_demo.sh  send_traffic.py  test_api.py  verify_system.py  web_ui.py
myshark/static/: style.css
myshark/templates/: index.html  log.html  packet.html
myshark/tests/: __init__.py  conftest.py  test_myshark.py
src/: parser.py  store.py
templates/: 404.html  index.html  packet.html
tests/: test_myshark.py
